--- a/animalshelters/index.html
+++ b/animalshelters/index.html
@@ -6,8 +6,7 @@
       Bunnies and Bracelets : A Shelter Finder for Middlesex County
     </title>
   </head>
-  <body>
-   <background-image: url("Screen Shot 2017-05-16 at 5.27.45 PM.png");>
+  <body background="Screen Shot 2017-05-16 at 5.27.45 PM.png">
    <h1>Bunnies and Bracelets : A Shelter Finder for Middlesex County</h1>
       <li> <a href="about.html">About Us</a>
      
