--- a/animalshelters/index.html
+++ b/animalshelters/index.html
@@ -6,7 +6,7 @@
       Bunnies and Bracelets : A Shelter Finder for Middlesex County
     </title>
   </head>
-  <body background="https://us.123rf.com/450wm/phanuchat/phanuchat1408/phanuchat140800027/30717282-poop.jpg?ver=6">
+  <body background="Screen Shot 2017-05-16 at 5.27.45 PM.png">
    <h1>Bunnies and Bracelets : A Shelter Finder for Middlesex County</h1>
       <li> <a href="about.html">About Us</a>
      
