--- a/animalshelters/shelters/GermanShepherdRescueofNeng.html
+++ b/animalshelters/shelters/GermanShepherdRescueofNeng.html
@@ -1,5 +1,5 @@
 
-<DOCTYPE! html>
+<html>
 <head>
  <link rel="stylesheet" type"text/css" href="../Shelters.css">
 <title>Shelter: German Shepherd Rescue of Neng<title/>
