--- a/animalshelters/shelters/GermanShepherdRescueofNeng.html
+++ b/animalshelters/shelters/GermanShepherdRescueofNeng.html
@@ -1,20 +1,29 @@
-
+ 
 <html>
+ 
+ 
 <head>
- <link rel="stylesheet" type"text/css" href="../Shelters.css">
-<title>Shelter: German Shepherd Rescue of Neng<title/>
-<head/>
+ 
+<title>Shelter: German Shepherd Rescue of New England</title>
+ 
+</head>
+ 
 <body>
- <h1>Shelter: German Shepherd Rescue of Neng<title/>
-</h1>
+ 
+ <h1>Shelter: German Shepherd Rescue of New England</h1>
+ 
 <p>Locations in - Wayland</p>
+ 
 <p>Address - Wayland, MA 01778<p/>
-<p>Contact German Shepherd Rescue of Neng (Phone Number): (978) 443-2202</p>
-<p>Contact German Shepherd Rescue of Neng (Email Address): http://gsrne.org/contact-us/</p>
+ 
+<p>Contact German Shepherd Rescue of New England (Phone Number): (978) 443-2202</p>
+ 
+<p>Contact German Shepherd Rescue of New England (Email Address): http://gsrne.org/contact-us/</p>
+ 
 <p><a href="http://gsrne.org/">Website URL</a><p/>
+ 
 <p><a href="http://gsrne.org/donate/">Stuff Needed (How to Help/Donate Money)</a><p/>
-<p><a href="https://www.amazon.com/gp/registry/wishlist/R3GXMSK8R10Q/ref=cm_sw_su_w">Stuff Needed (Wishlist)</a><p/>
-<p>Animal Species Hosted: Dogs- German Shepherds exclusively<p/>
-<p>Star Rating: 4.7 stars<p/>
-<p>Services Offered: Adoption, Medical Care, Taking in Pets<p/>
+ 
+ <p><a href="https://www.amazon.com/gp/registry/wishlist/R3GXMSK8R10Q/ref=cm_sw_su_w">Stuff Needed (Wishlist)</a><p/>
+ 
 <li> <a href="/animalshelters">Back to index</a>
