--- a/animalshelters/shelters/GermanShepherdRescueofNeng.html
+++ b/animalshelters/shelters/GermanShepherdRescueofNeng.html
@@ -3,7 +3,7 @@
  
  
 <head>
- 
+ <link rel="stylesheet" type"text/css" href="../Shelters.css">
 <title>Shelter: German Shepherd Rescue of New England</title>
  
 </head>
