--- a/animalshelters/shelters/GermanShepherdRescueofNeng.html
+++ b/animalshelters/shelters/GermanShepherdRescueofNeng.html
@@ -25,5 +25,9 @@
 <p><a href="http://gsrne.org/donate/">Stuff Needed (How to Help/Donate Money)</a><p/>
  
  <p><a href="https://www.amazon.com/gp/registry/wishlist/R3GXMSK8R10Q/ref=cm_sw_su_w">Stuff Needed (Wishlist)</a><p/>
- 
+  
+<p>Animal Species Hosted: Dogs- German Shepherds exclusively<p/>
+<p>Star Rating: 4.7 stars<p/>
+<p>Services Offered: Adoption, Medical Care, Taking in Pets<p/>
+
 <li> <a href="/animalshelters">Back to index</a>
