--- a/animalshelters/shelters/sterlinganimalshelter.html
+++ b/animalshelters/shelters/sterlinganimalshelter.html
@@ -7,7 +7,7 @@
 <body>
  <h1>Shelter: Sterling Animal Shelter</h1>
 <p>Locations in - Sterling, Shirley, Ayer</p>
-<p>Address - 17 Laurelwood Road Sterling, MA 01564<p/>
+<p>Address - 17 Laurelwood Road, Sterling, MA 01564<p/>
 <p>Contact Sterling Animal Shelter (Phone Number): 978-443-6990</p>
 <p>Contact Sterling Animal Shelter (Fax) : 978-422-8574
 <p>Contact Sterling Animal Shelter (Email Address): sterlingshelterclinic@gmail.com</p>
