--- a/animalshelters/shelters/SpinStrayPetsInNeed.html
+++ b/animalshelters/shelters/SpinStrayPetsInNeed.html
@@ -6,8 +6,8 @@
 </head>
 <body>
  <h1>Shelter: Spin Stray Pets in Need</h1>
-<p>Locations in - Wellesley</p>
-<p>Address - P.O. Box : #812143 Wellesley, MA 02482-0014 <p/>
+<p>Locations in - Wellesley, Natick</p>
+<p>Address -  5 Overbrook Terrace, Natick, MA 01760<p/>
 <p>Contact Spin Stray Pets in Need (Phone Number): (781) 235-1218
 </p>
 <p>Contact Spin Stray Pets in Need (Email Address):  tiwat@aol.com </p>
