--- a/animalshelters/shelters/KittyConnection.html
+++ b/animalshelters/shelters/KittyConnection.html
@@ -7,7 +7,7 @@
 <body>
  <h1>Shelter: Kitty Conection</h1>
 <p>Locations in - Medford </p>
-<p>Address - Medford MA 02155<p/>
+<p>Address - 6 Cudworth St, Medford, MA 02155<p/>
 <p>Contact Kitty Conection (Phone Number): 781-393-9995</p>
 <p>Contact Kitty Connection (Email Address):  kc@kittyconnection.net </p>
 <p><a href="http://www.kittyconnection.net/">Website URL</a><p/>
