--- a/animalshelters/shelters/GermanShepherdRescueofNeng.html
+++ b/animalshelters/shelters/GermanShepherdRescueofNeng.html
@@ -18,7 +18,7 @@
  
 <p>Contact German Shepherd Rescue of New England (Phone Number): (978) 443-2202</p>
  
-<p>Contact German Shepherd Rescue of New England (Email Address): http://gsrne.org/contact-us/</p>
+<p>Contact German Shepherd Rescue of New England (All info): http://gsrne.org/contact-us/</p>
  
 <p><a href="http://gsrne.org/">Website URL</a><p/>
  
