--- a/animalshelters/shelters/BuddyDogHumaneSociety.html
+++ b/animalshelters/shelters/BuddyDogHumaneSociety.html
@@ -17,4 +17,5 @@
 <p>Star Rating: 4.4 stars<p/>
 <p>Services Offered: Adoption, Taking in Pets<p/>
 <li> <a href="/animalshelters">Back to index</a>
+  <img src=https://static.wixstatic.com/media/61c625_3ab9ef43a94c4524a96a20be39526cbb.jpg/v1/fill/w_632,h_421,al_c,q_80,usm_0.66_1.00_0.01/61c625_3ab9ef43a94c4524a96a20be39526cbb.webp>
   </body> </html>
