--- a/index.html
+++ b/index.html
@@ -1,3 +1,17 @@
 <h1>Welcome to Wayland Girls Who Code!</h1>
 
-<a href="https://docs.google.com/presentation/d/1LfyaNlyG1IgWkw-msUaAQJcblTFlunjRvZIdzBbwVgc/edit?usp=sharing">Slides for November 14</a>
+<ul>
+  <li> <a href="https://youtu.be/RXNUSAmBNIw">Rebecca Parsons video</a> </li>
+</ul>
+
+<h3>Example CS impact projects</h3>
+
+<ul>
+  <li> <a href="https://scratch.mit.edu/projects/166612504/">Defeat Objectification</a></li>
+  <li> <a href="https://savethearts.jimdo.com/">Save the Arts</a></li>
+  <li> <a href="http://www.waylandgwc.org/gwc-2016-2017/animalshelters/">Animal shelters in Middlesex County</a></li>
+  <li> <a href="http://www.projects.gwcnorfolk.org/">Interactive eBooks</a></li>
+  <li> <a href="https://nancycao.github.io/pawductivity">Paw-ductivity</a></li>
+  <li> <a href="http://newtongwc.github.io/phishing.html">Phishing (cybersecurity)</a></li>
+  
+</ul>
