--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <h1>Welcome to Wayland Girls Who Code!</h1>
 
+<h3>Technical skils</h3>
 <ul>
-  <li> <a href="https://youtu.be/RXNUSAmBNIw">Rebecca Parsons video</a> </li>
+  <li> <a href="https://hq.girlswhocode.com/gwc/collection/activity-sets/set/fashion-in-scratch/activity/scratch-1-fashion-game-introduction-to-scratch">Fashion in Scratch </a></li>
+<li><a href="https://hq.girlswhocode.com/gwc/collection/activity-sets/set/digital-art-in-khan-academy/activity/khan-academy-draw-a-creature">Digital Art in Khan Academy</a></li>
+<li><a href="https://www.codesters.com/curriculum/intro-to-codesters/Building+your+First+Program/1/">Storytelling with Codesters</a></li>
+<li><a href="https://hq.girlswhocode.com/gwc/collection/activity-sets/set/music-in-earsketch/activity/compose-a-song-in-earsketch" >Music in Earsketch</a></li>
 </ul>
 
 <h3>Example CS impact projects</h3>
