Changed to list current projects

--- a/index.html
+++ b/index.html
@@ -1,21 +1,10 @@
 <h1>Welcome to Wayland Girls Who Code!</h1>
 
-<h3>Technical skils</h3>
+<h3>Current projects</h3>
 <ul>
-  <li> <a href="https://hq.girlswhocode.com/gwc/collection/activity-sets/set/fashion-in-scratch/activity/scratch-1-fashion-game-introduction-to-scratch">Fashion in Scratch </a></li>
-<li><a href="https://hq.girlswhocode.com/gwc/collection/activity-sets/set/digital-art-in-khan-academy/activity/khan-academy-draw-a-creature">Digital Art in Khan Academy</a></li>
-<li><a href="https://www.codesters.com/curriculum/intro-to-codesters/Building+your+First+Program/1/">Storytelling with Codesters</a></li>
-<li><a href="https://hq.girlswhocode.com/gwc/collection/activity-sets/set/music-in-earsketch/activity/compose-a-song-in-earsketch" >Music in Earsketch</a></li>
+  <li> <a href="sweet-treats-yum">Sweet Treats Yum!</a></li>
+  <li> <a href="https://hq.girlswhocode.com/gwc/collection/activity-sets/set/digital-art-in-khan-academy/activity/khan-academy-draw-a-creature">Digital Art in Khan Academy</a></li>
+  <li> a href="https://www.codesters.com/curriculum/intro-to-codesters/Building+your+First+Program/1/">Storytelling with Codesters</a></li>
+  <li> <a href="https://hq.girlswhocode.com/gwc/collection/activity-sets/set/music-in-earsketch/activity/compose-a-song-in-earsketch" >Music in Earsketch</a></li>
 </ul>
 
-<h3>Example CS impact projects</h3>
-
-<ul>
-  <li> <a href="https://scratch.mit.edu/projects/166612504/">Defeat Objectification</a></li>
-  <li> <a href="https://savethearts.jimdo.com/">Save the Arts</a></li>
-  <li> <a href="http://www.waylandgwc.org/gwc-2016-2017/animalshelters/">Animal shelters in Middlesex County</a></li>
-  <li> <a href="http://www.projects.gwcnorfolk.org/">Interactive eBooks</a></li>
-  <li> <a href="https://nancycao.github.io/pawductivity">Paw-ductivity</a></li>
-  <li> <a href="http://newtongwc.github.io/phishing.html">Phishing (cybersecurity)</a></li>
-  
-</ul>
