--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 
 <h3>Current projects</h3>
 <ul>
-  <li> <a href="sweet-treats-yum">Sweet Treats Yum!</a></li>
-  <li> <a href="https://hq.girlswhocode.com/gwc/collection/activity-sets/set/digital-art-in-khan-academy/activity/khan-academy-draw-a-creature">Digital Art in Khan Academy</a></li>
-  <li> a href="https://www.codesters.com/curriculum/intro-to-codesters/Building+your+First+Program/1/">Storytelling with Codesters</a></li>
-  <li> <a href="https://hq.girlswhocode.com/gwc/collection/activity-sets/set/music-in-earsketch/activity/compose-a-song-in-earsketch" >Music in Earsketch</a></li>
+  <li> <a href="sweet-treats-yum">Sweet Treats Yum!</a>
+      [<a href="https://github.com/WaylandGWC/sweet-treats-yum">github</a>]
+  </li>
+  
+  <li> <a href="live-love-give">Live Love Give</a>
+      [<a href="https://github.com/WaylandGWC/live-love-give">github</a>]
+  </li>
+  
+  <li> <a href="la-vie">La Vie</a>
+      [<a href="https://github.com/WaylandGWC/la-vie">github</a>]
+  </li>
 </ul>
 
