Fixed name for live love give.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
       [<a href="https://github.com/WaylandGWC/sweet-treats-yum">github</a>]
   </li>
   
-  <li> <a href="live-love-give">Live Love Give</a>
-      [<a href="https://github.com/WaylandGWC/live-love-give">github</a>]
+  <li> <a href="livelovegive">Live Love Give</a>
+      [<a href="https://github.com/WaylandGWC/livelovegive">github</a>]
   </li>
   
   <li> <a href="la-vie">La Vie</a>
