Added note about the chat services being unavailable now.

--- a/gwc-2016-2017/shoulder/topicdiscussion.html
+++ b/gwc-2016-2017/shoulder/topicdiscussion.html
@@ -2,6 +2,7 @@
 <html>
   <body>
     <h1>Topic Discussions</h1>
+    <i>Note: the interactive chat software for this project is no longer available.</i>
     <ul>
     <li> <h3> <a href="http://li468-19.members.linode.com:3000/channel/Alcohol"> Alcochol </a> </h3>
       <p>Join this chat to learn how others stopped their drinking problem and follow their steps for your own or a someone close's problem.</p>
