Added fold-and-cut bat link.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <body>
-<a href="https://www.khanacademy.org/computing/computer-programming/html-css/intro-to-html/v/making-webpages-intro">Khan Academy HTML tutorial</a>
+<p><a href="https://www.khanacademy.org/computing/computer-programming/html-css/intro-to-html/v/making-webpages-intro">Khan Academy HTML tutorial</a></p>
+  <p><a href="https://www.youtube.com/watch?v=1K-uEwD0OTg">Fold-and-cut Bat</a></p>
 </body>
 </html>
